# vmlapis

./: CLAUDE.md  Dockerfile  Makefile  README.md  buf-versions-3.toml  buf.gen.all.yaml  buf.gen.deps.yaml  buf.gen.grpc.yaml  buf.gen.openapiv2.yaml  buf.gen.python.yaml  buf_plugin_manager.py  cloudbuild.yaml  go.mod  go.mod.example  go.sum  package-lock.json  package.json  pyproject.toml  vmlapis.csproj  vmlapis.sln
docs/superpowers/specs/: 2026-03-18-product-type-enum-design.md
docs/vmlpowers/plans/: 2026-04-21-document-data-service.md  2026-04-24-feedback-documentdata-integration.md
docs/vmlpowers/specs/: 2026-04-21-document-data-service-complex-fields-design.md  2026-04-21-document-data-service-design.md  2026-04-21-document-data-service-spanner-schema-design.md  2026-04-21-document-data-service-write-endpoints-design.md  2026-04-24-feedback-documentdata-integration.md
examples/csharp/AutosuggestCreateDatasetExample/: Program.cs
examples/go/AutosuggestCreateDatasetExample/: example.go  go.mod  go.sum
examples/go/SmartscanAnnotateDocumentExample/: go.mod  go.sum
examples/go/SmartscanRasterizePdfExample/: go.mod  go.sum
examples/java/AutosuggestCreateDatasetExample/src/main/java/org/example/: Client.java
examples/python/: README.md
examples/python/AutosuggestCreateDatasetExample/: example.py
examples/python/SmartscanAnnotateDocumentExample/: requirements.txt
examples/python/SmartscanRasterizePdfExample/: requirements.txt
java-package/: pom.xml
proto/: buf.yaml
proto/asgt/data/v1/: data_service.proto
proto/asgt/jester/v1/: jester.proto
proto/asgt/modelregistry/v1/: model_registry.proto
proto/asgt/type/: dataset_statistics.proto  model_type.proto  prediction.proto  target_metrics.proto
proto/asgt/v2/: dataset_service.proto  product_service.proto  suggester_service.proto
proto/ssn/annotator/v1/: annotator.proto
proto/ssn/asyncton/v1/: asyncton.proto
proto/ssn/companylookup/v1/: companylookup.proto
proto/ssn/dataservice/v1/: dataservice.proto
proto/ssn/documentdataservice/v1/: document_data_service.proto  documentdataservice.proto
proto/ssn/geo/v1/: geo_service.proto
proto/ssn/mlservice/v2/: mlservice.proto
proto/ssn/ocrservice/v1/: ocrservice.proto
proto/ssn/pdfservice/v1/: pdfservice.proto
proto/ssn/predictservice/v1/: predictservice.proto
proto/ssn/type/: address.proto  candidate.proto  hotel_dates.proto  qr.proto  swiss_qr_bill.proto  tier.proto
scripts/: gomock.sh  py_fixes.sh  update_protobuf_version.sh
scripts/vml-buf/: README.md  pyproject.toml
scripts/vml-buf/src/: main.py  models.py  sync_packages.py  version.py
