[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vml_proto"
module-root = "gen/python"
namespace = true

[project]
name = "vml_proto"
version = "0.0.0"
description = "A package containing vml protobuf definitions for python"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "vismaml", email = "worksmarter@visma.com" }]
classifiers = [
    "Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["protobuf~=5.29.3", "grpcio"]

[project.urls]
Homepage = "https://github.com/vismaml/vmlapis"
Repository = "https://github.com/vismaml/vmlapis"
Documentation = "http://docs.vml.visma.ai/"

[tool.uv]
package = true
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "vml-api"
url = "https://oauth2accesstoken@europe-west4-python.pkg.dev/dev-vml-cm/vml-apis-python/simple/"
publish-url = "https://europe-west4-python.pkg.dev/dev-vml-cm/vml-apis-python/"
explicit = true
