[project]
name = "vml_proto"
version = "0.0.1"
description = "A package containing vml protobuf definitions for python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "vismaml", email = "worksmarter@visma.com" },
]
classifiers = [
    "Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio",
    "protobuf~=5.29.5",
    "types-protobuf~=5.29",
]

[project.urls]
Homepage = "https://github.com/vismaml/vmlapis"
Repository = "https://github.com/vismaml/vmlapis"
Documentation = "http://docs.vml.visma.ai/"

[build-system]
requires = [
    "uv_build>=0.8.11"
]
build-backend = "uv_build"

[tool.uv]
package = true
keyring-provider = "subprocess"

[tool.uv.build-backend]
module-name = "vml_proto"
module-root = "gen/python"
namespace = true

[[tool.uv.index]]
name = "vml-api"
url = "https://oauth2accesstoken@europe-west4-python.pkg.dev/dev-vml-cm/vml-apis-python/simple/"
publish-url = "https://europe-west4-python.pkg.dev/dev-vml-cm/vml-apis-python/"
explicit = true


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "ISC",
]
ignore = [
    "B905",
]
fixable = [
    "ALL",
]
# unfixable = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = [
    "vml_proto",
]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["grpc"]
